language/tests/error/ParseError01.hashem
bebin main() {
  bede -1;
}